@@ -1,3 +1,4 @@
+1/27/14 linear graph: add arrow to top of scale, implement tick marks, wire up zoom buttons
 # 1.0.0-dev.8 1/23/14
 1/27/14 add jsdoc @private tags throughout code
 1/27/14 make autoFill and option of BasicModel, instead of a constructor param
